crates/pera/tests/snapshots/ptb_files_tests__publish_too_many_args.ptb.snap
---
source: crates/pera/tests/ptb_files_tests.rs
expression: "results.join(\"\\n\")"
---
 === ERRORS AFTER PARSING INPUT COMMANDS === 
  × Error when processing PTB
   ╭────
 1 │ --publish too many args 
   ·               ──┬─
   ·                 ╰── Unexpected identifier 'many'
   ╰────
  help: Expected to find a command here

