crates/pera/tests/snapshots/ptb_files_tests__resolve_array_inside_array.ptb.snap
---
source: crates/pera/tests/ptb_files_tests.rs
expression: "results.join(\"\\n\")"
---
 === ERRORS AFTER PARSING INPUT COMMANDS === 
  × Error when processing PTB
   ╭────
 1 │ --make-move-vec <vector<address>> [[@0x1], [@0x2], [@0x3]] 
   ·                                    ┬
   ·                                    ╰── Unexpected '['
   ╰────
  help: Expected an argument here

